# typed_alias

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
include/calculator/: calculator.h
include/typed_alias/: array.h  containers.h  deque.h  forward_list.h  list.h  map.h  set.h  string.h  type.h  typed_alias.h  unordered_map.h  unordered_set.h  vector.h
src/: main.cpp
src/calculator/: calculator.cpp
test/calculator/: calculator_test.cpp
test/typed_alias/: array_test.cpp  composition_test.cpp  composition_way_test.cpp  container_iterators_test.cpp  deque_test.cpp  forward_list_test.cpp  list_test.cpp  map_test.cpp  set_test.cpp  string_test.cpp  type_test.cpp  typed_alias_test.cpp  unordered_map_test.cpp  unordered_set_test.cpp  vector_test.cpp
