load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

package(default_visibility = ["//visibility:public"])

exports_files([
    "LICENSE",
    "README.md",
])

cc_library(
    name = "typed_alias",
    srcs = glob(["src/typed_alias/*.cpp"], allow_empty = True),
    hdrs = glob(["include/typed_alias/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "typed_alias_test",
    srcs = glob(["test/typed_alias/*_test.cpp"]),
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
        "@googletest//:gtest",
    ],
    tags = ["coverage"],
)

cc_test(
    name = "composition_way_test",
    srcs = ["test/typed_alias/composition_way_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
    ],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//...": "",
    },
    exclude_headers = "all",
)