load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

package(default_visibility = ["//visibility:public"])

exports_files([
    "LICENSE",
    "README.md",
])

cc_library(
    name = "typed_alias",
    srcs = glob(["src/typed_alias/*.cpp"], allow_empty = True),
    hdrs = glob(["include/typed_alias/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "type_test",
    srcs = ["test/typed_alias/type_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "string_test",
    srcs = ["test/typed_alias/string_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "vector_test",
    srcs = ["test/typed_alias/vector_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "map_test",
    srcs = ["test/typed_alias/map_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "set_test",
    srcs = ["test/typed_alias/set_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "composition_way_test",
    srcs = ["test/typed_alias/composition_way_test.cpp"],
    size = "small",
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "composition_test",
    srcs = ["test/typed_alias/composition_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "array_test",
    srcs = ["test/typed_alias/array_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "deque_test",
    srcs = ["test/typed_alias/deque_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "list_test",
    srcs = ["test/typed_alias/list_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "forward_list_test",
    srcs = ["test/typed_alias/forward_list_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "unordered_set_test",
    srcs = ["test/typed_alias/unordered_set_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "unordered_map_test",
    srcs = ["test/typed_alias/unordered_map_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "container_iterators_test",
    srcs = ["test/typed_alias/container_iterators_test.cpp"],
    size = "small",
    deps = [
        ":typed_alias",
        "@googletest//:gtest_main",
    ],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//...": "",
    },
    exclude_headers = "all",
)