module(
    name = "cpp_project",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "hedron_compile_commands", version = "0.5.1")
bazel_dep(name = "googletest", version = "1.14.0")

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
